[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-one"
version = "0.0.1"
description = ''
readme = "readme.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "agnext@{root:parent:parent:uri}",
    "aiofiles",
    "requests",
    "mammoth",
    "markdownify",
    "numpy",
    "python-pptx",
    "easyocr",
    "pandas",
    "pdfminer.six",
    "puremagic",
    "binaryornot",
    "pydub",
    "youtube-transcript-api",
    "SpeechRecognition",
    "pathvalidate",
    "playwright",
]

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
    "pyright==1.1.368",
    "mypy==1.10.0",
    "ruff==0.4.8",
    "pytest",
    "aiofiles",
    "types-aiofiles",
    "types-requests",
    "types-pillow",
    "azure-identity",
]

[tool.hatch.envs.default.extra-scripts]
pip = "{env:HATCH_UV} pip {args}"

[tool.hatch.envs.default.scripts]
fmt = "ruff format"
lint = "ruff check"
test = "pytest -n auto"
check = [
    "ruff format",
    "ruff check --fix",
    "pyright",
    "mypy --non-interactive --install-types",
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
fix = true
exclude = ["build", "dist", "page_script.js"]
target-version = "py310"
include = [
    "src/**",
    "examples/*.py",
    "../../benchmarks/HumanEval/Templates/TeamOne/scenario.py",
    "../../benchmarks/HumanEval/Templates/TwoAgents/scenario.py",
    "../../benchmarks/GAIA/TeamOne/TwoAgents/scenario.py",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC"]
ignore = ["F401", "E501"]

[tool.mypy]
files = [
    "src",
    "tests",
    "examples",
]

strict = true
python_version = "3.10"
ignore_missing_imports = true

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true

[tool.pyright]
include = [
    "src",
    "tests",
    "examples",
    "../../benchmarks/HumanEval/Templates/TeamOne/scenario.py",
    "../../benchmarks/HumanEval/Templates/TwoAgents/scenario.py",
    "../../benchmarks/GAIA/Templates/TeamOne/scenario.py",
]
typeCheckingMode = "strict"
reportUnnecessaryIsInstance = false
reportMissingTypeStubs = false
