[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autogenbench"
authors = [
  { name="Autogen Team", email="autogen-contact@service.microsoft.com" },
]
description = "AutoGen Testbed Tools"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyautogen",
    "docker",
    "huggingface_hub",
    "tabulate",
]

dynamic = ["version"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "autogenbench.version.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
include = ["autogenbench*"]
exclude = ["*.tests*"]

[tool.setuptools.package-data]
"autogenbench" = ["*.*"]

[project.urls]
"Homepage" = "https://github.com/microsoft/autogen"
"Bug Tracker" = "https://github.com/microsoft/autogen/issues"

[project.scripts]
autogenbench = "autogenbench.cli:main"

[tool.black]
# https://github.com/psf/black
line-length = 120
exclude = "(.eggs|.git|.hg|.mypy_cache|.venv|_build|buck-out|build|dist)"
