[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogencap_rajan.jedi"
version = "0.0.2"
authors = [
  { name="Rajan Chari", email="rajan.jedi@gmail.com" },
]
description = "CAP w/ autogen bindings"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/autogen"
"Bug Tracker" = "https://github.com/microsoft/autogen/issues"

[tool.hatch.build.targets.sdist]
packages = ["autogencap"]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["autogencap"]
only-packages = true
